--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,11 +1,11 @@
-/* :root {
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: #ffe0b1;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,12 +24,12 @@ body {
 }
 
 /* 페이지 전체를 채우는 기본 스타일 */
-/* body {
+body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-width: 320px;
+  min-width: 300px;
   min-height: 100vh;
   
-}  */
+} 
