S12P11E104-361 Feat: 페이지별 타이틀 이미지 추가 - 메인페이지 카드 이미지 삽입

--- a/fe/src/features/wordgame/WordMain.css
+++ b/fe/src/features/wordgame/WordMain.css
@@ -23,3 +23,10 @@
 .home-button:hover {
   background-color: #c06c84; /* 버튼 호버 색상 */
 }
+
+.wordtitle-image {
+  width: 100%;
+  max-width: 600px;
+  margin: 2.5rem auto;
+  display: block;
+}
