--- a/fe/src/features/pronunciation/PronsMain.css
+++ b/fe/src/features/pronunciation/PronsMain.css
@@ -47,3 +47,11 @@
   .start-button:hover {
     background-color: #d68910;
   }
+
+  .pronstitle-image {
+    width: 100%;
+    max-width: 600px;
+    margin: 2.5rem auto;
+    display: block;
+  }
+  
