--- a/fe/src/features/mainpage/Main.css
+++ b/fe/src/features/mainpage/Main.css
@@ -3,8 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    padding: 40px;
+    gap: 4rem;
     flex-wrap: nowrap; /* 줄바꿈 없이 한 줄로 배치 */
     overflow-x: auto; /* 화면이 작아질 때 가로 스크롤 생성 */
 }
@@ -30,12 +29,12 @@
     justify-content: flex-start; /* 텍스트를 카드 상단에 배치 */
     align-items: center;
     text-align: center;
-    width: 300px;
+    width: 1.5rem;
     height: 450px;
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    padding: 20px;
+    padding: 2rem;
     overflow: hidden;
     transition: transform 0.2s, box-shadow 0.2s;
 }
