--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -18,8 +18,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /* 모든 요소의 테두리 및 패딩을 박스 크기에 포함 */
-  width: 100%;
+  /* box-sizing: border-box; */
   height: 100%;
 }
 
@@ -33,3 +32,10 @@ body {
   min-height: 100vh;
   
 } 
+
+@font-face {
+  font-family: 'Dovemayo_gothic';
+  src: url('./assets/fonts/Dovemayo_wild.ttf') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
