--- a/fe/src/features/pronunciation/FirstPrac.css
+++ b/fe/src/features/pronunciation/FirstPrac.css
@@ -1,39 +1,28 @@
 /* FirstPrac.css */
 
-/* .first-prac-container {
+.first-prac-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background-color: #f9f5e7;
-    height: 100vh;
     box-sizing: border-box;
-  } */
-  
-  .back-button {
-    align-self: flex-start;
-    margin-bottom: 10px;
-    font-size: 18px;
-    border: none;
-    background: none;
-    cursor: pointer;
   }
   
   .content-container {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width:150%;
     max-width: 800px;
   }
   
   .image-section {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 1.5rem;
   }
   
   .image-top, .image-bottom {
-    width: 150px;
+    width: 18rem;
     height: auto;
     border: 2px solid #ccc;
     border-radius: 10px;
@@ -58,7 +47,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 200px;
+    height: 25rem;
     background-color: #eef;
     border: 2px dashed #aaa;
     border-radius: 10px;
