--- a/fe/src/features/pronunciation/PronsMain.css
+++ b/fe/src/features/pronunciation/PronsMain.css
@@ -1,8 +1,15 @@
 .prons-container {
-    padding: 10px;
-    text-align: center;
-  }
+  padding: 1rem;
+  text-align: center;
+  margin-bottom: 10% ; /* 아래 여백 제거 */
+  height: 100vh; /* 화면 전체 높이를 차지 */
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* 수직 가운데 정렬 */
+  align-items: center; /* 수평 가운데 정렬 */
+  overflow: hidden; /* 스크롤 제거 */
   
+}
   .card{
     font-family: Dovemayo_gothic;
     font-size: 1.5rem;
@@ -21,10 +28,11 @@
   .start-button {
     padding: 10px 20px;
     font-size: 1rem;
+    font-family: Dovemayo_gothic;
     background-color: #f5b041;
     color: #fff;
     border: none;
-    border-radius: 10px;
+    border-radius: 5rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
