S12P11E104-363 Feat: 카메라 화면, 녹음 버튼 생성

--- a/fe/src/components/popup/PausePopup.css
+++ b/fe/src/components/popup/PausePopup.css
@@ -63,7 +63,7 @@
     opacity: 0.8;
   }
   
-.pause-button {
+.stop-button {
     position: fixed; /* 화면에 고정 */
     top: 20px; /* 화면 상단으로부터 20px */
     right: 20px; /* 화면 오른쪽으로부터 20px */
