--- a/fe/src/features/pronunciation/PronsFirstPrac.css
+++ b/fe/src/features/pronunciation/PronsFirstPrac.css
@@ -54,8 +54,17 @@
     font-size: 18px;
     color: #333;
     margin-bottom: 10px;
+    overflow: hidden;
   }
   
+
+  .camera-video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
   .accuracy {
     font-size: 18px;
     font-weight: bold;
