--- a/fe/src/features/pronunciation/PronsMain.css
+++ b/fe/src/features/pronunciation/PronsMain.css
@@ -1,13 +1,13 @@
 .prons-container {
   padding: 1rem;
   text-align: center;
-  margin-bottom: 10% ; /* 아래 여백 제거 */
-  height: 100vh; /* 화면 전체 높이를 차지 */
+  margin-top: 7%;
+  margin-bottom:  10%; /* 아래 여백 제거 */
+  min-height: 100vh; /* 화면 전체 높이를 차지 */
   display: flex;
   flex-direction: column;
-  justify-content: center; /* 수직 가운데 정렬 */
+  justify-content: flex-start; /* 수직 가운데 정렬 */
   align-items: center; /* 수평 가운데 정렬 */
-  overflow: hidden; /* 스크롤 제거 */
   
 }
   .card{
@@ -18,9 +18,7 @@
   .card-slider {
     display: flex;
     gap: 20px;
-    overflow-x: auto; /* 가로 스크롤 활성화 */
-    padding: 10px;
-    scroll-snap-type: x mandatory; /* 슬라이드 스냅 */
+    flex-wrap: wrap;
     width: 100%;
     box-sizing: border-box;
   }
@@ -48,3 +46,9 @@
     display: block;
   }
   
+  .record-button-container {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
