--- a/fe/src/features/pronunciation/PronsMain.css
+++ b/fe/src/features/pronunciation/PronsMain.css
@@ -23,6 +23,35 @@
     box-sizing: border-box;
   }
 
+  .card:nth-child(1) {
+    background: linear-gradient(135deg, #f28d8d, #f5b2b2); /* 첫 번째 카드 그라데이션 */
+    color: #fff;
+    
+  }
+  .card:nth-child(2) {
+      background: linear-gradient(135deg, #88c2d8, #b3e4f2); /* 두 번째 카드 그라데이션 */
+      color: #fff;
+      
+  }
+  .card:nth-child(3) {
+      background: linear-gradient(135deg, #ffb88c, #ffd7a5); /* 세 번째 카드 그라데이션 */
+      color: #fff;
+      
+    }
+
+
+  .card .emoji {
+    font-size: 2rem;
+    margin-bottom: 10px;
+  }
+
+  .card .divider {
+    width: 80%;
+    height: 2px;
+    background-color: #ccc;
+    margin: 10px 0;
+  }
+
   .start-button {
     padding: 10px 20px;
     font-size: 1rem;
