--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -31,7 +31,9 @@ body {
   min-width: 300px;
   min-height: 100vh;
   
-} 
+}
+
+
 
 @font-face {
   font-family: 'Dovemayo_gothic';
@@ -40,5 +42,15 @@ body {
   font-style: normal;
 }
 
-
-  
+.next-button {
+    margin-top: 20px; /* 원하는 만큼 조정 (기본값보다 늘림) */
+    padding: 12px 24px;
+    font-size: 18px;
+    background-color: #00897b;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
