--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -2,13 +2,13 @@
 
 /* 전체 컨테이너 */
 .container {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  background-color: #ffe0b1; /* 배경 색상 */
-  font-family: Arial, sans-serif;
+  height: 100vh; */
+  background-color: #ffe0b1;
+  /* font-family: Arial, sans-serif; */
 }
 
 
