--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -1,44 +1,74 @@
+/* FirstPrac.css */
+
 .prons-second-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-  }
-  
-  .description-box {
-    text-align: center;
-    background-color: #ffecb3;
     padding: 20px;
+    box-sizing: border-box;
+  }
+  
+  .content-container {
+    display: flex;
+    justify-content: space-between;
+    width:150%;
+    max-width: 800px;
+  }
+  
+  .image-section {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  
+  .image-top, .image-bottom {
+    width: 18rem;
+    height: auto;
+    border: 2px solid #ccc;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 70%;
-    margin-bottom: 20px;
   }
   
-  .title {
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: #ff9800;
+  .camera-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    background-color: #fff;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .camera-frame {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 25rem;
+    background-color: #eef;
+    border: 2px dashed #aaa;
+    border-radius: 10px;
+    font-size: 18px;
+    color: #333;
     margin-bottom: 10px;
+    overflow: hidden;
   }
   
-  .text {
-    font-size: 1.2rem;
-    color: #616161;
+
+  .camera-video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
+  .accuracy {
+    font-size: 18px;
+    font-weight: bold;
+    color: #444;
   }
   
-  .next-button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    background-color: #ffa726;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .next-button:hover {
-    background-color: #fb8c00;
-  }
   
