--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -71,4 +71,33 @@
     color: #444;
   }
   
-  
+  .accuracy-box {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    width: 150px;
+    padding: 15px;
+    border: 2px solid black;
+    background-color: #ffebcd;
+    text-align: left;
+}
+.accuracy-box h3 {
+    margin: 0;
+    font-size: 16px;
+}
+.accuracy-box p {
+    margin: 5px 0;
+    font-size: 14px;
+}
+
+.pronunciation-box {
+    position: absolute;
+    top: 3%;  /* 화면 상단에 배치 */            
+    background-color: none;
+    padding: 10px 15px;
+    border-radius: 40px;
+    font-family: 'DXChildsdrawing';
+    font-size: 55px;
+    font-weight: bold;
+    color: #000000;
+}
