S12P11E104-490 Feat: 발음 학습 결과 페이지 만드는중

--- a/fe/src/features/pronunciation/PronsResult.css
+++ b/fe/src/features/pronunciation/PronsResult.css
@@ -40,5 +40,17 @@
     cursor: not-allowed;
   }
   
-
+  .exit-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+  }
+  .exit-button:hover {
+    background-color: #cc0000;
+  }
   
