--- a/fe/src/features/pronunciation/PronsFirst.css
+++ b/fe/src/features/pronunciation/PronsFirst.css
@@ -44,18 +44,55 @@
     margin-left: -10px;
 }
 
-/* 🔹 버튼 크기 키우기 */
-.next-button {
-    padding: 14px 24px; /* 버튼 크기 키움 */
-    font-size: 1rem; /* 기존보다 폰트 크기 키움 */
-    background-color: #4caf50;
+.audio-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5px;
+  }
+  
+  .audio-button {
+    background-color: #87b089;
     color: white;
+    padding: 10px 20px;
+    font-size: 16px;
     border: none;
-    border-radius: 6px;
+    border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s ease;
+  }
+  
+  .audio-button:hover {
+    background-color: #45a049;
+  }
+  
+  .audio-container audio {
+    margin-top: 10px;
+    width: 300%;
+    max-width: 300px;
+    z-index: 2;
+  }
+  
+  .next-arrow-container {
+  position: absolute;
+  bottom: 45%;
+  right: 2%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.5rem;
+  height: 50px;
+  border-radius: 50%;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
-.next-button:hover {
-    background-color: #388e3c;
+.next-arrow-container:hover {
+  background-color: #ffe0b1;
+  transform: scale(1.3);
+}
+
+.next-arrow {
+  color: rgb(0, 0, 0);
+  font-size: 24px;
 }
