--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -1,14 +1,12 @@
 /* App.css */
 
 /* 전체 컨테이너 */
-.container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh; */
+.app-container {
   background-color: #ffe0b1;
-  /* font-family: Arial, sans-serif; */
-}
+  display: flex;
+  justify-content: center;  /* 수평 중앙 정렬 */
+  align-items: center;  /* 수직 중앙 정렬 */
+  height: 100vh;  /* 전체 뷰포트 높이 */
+} 
 
 
