--- a/fe/src/features/pronunciation/PronsResult.css
+++ b/fe/src/features/pronunciation/PronsResult.css
@@ -6,12 +6,11 @@
   }
   
   .current-session-result {
-    margin-top: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: #f3b393;
-    padding: 7rem;
+    padding: 5rem;
     border-radius: 10px;
     margin-bottom: 20px;
   }
@@ -21,24 +20,37 @@
     height: 13rem;
     border-radius: 50%;
     background: rgb(228, 213, 213); /* 이미지 자리 */
-  }
+    overflow: hidden; /* 초과 부분 잘라내기 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
   
+  .profile-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* 이미지가 원형에 꽉 차도록 조정 */
+  }
+
   .session-info {
     flex-grow: 1;
     text-align: left;
-    padding-left: 20px;
+    padding-left: 5rem;
+
   }
   
   .session-score {
     font-size: 20px;
     font-weight: bold;
+    
   }
   
   .session-buttons button {
     margin-right: 10px;
     padding: 8px 15px;
     border: none;
-    background: #007bff;
+    background: #64b0b7;
     color: white;
     cursor: pointer;
     border-radius: 5px;
