--- a/fe/src/features/mainpage/SingleMain.css
+++ b/fe/src/features/mainpage/SingleMain.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center; /* 중앙 정렬 */
-    padding: 40px 20px;
+    padding: 0;
     background-color: #ffe0b1;
     min-height: 100vh;
 }
