--- a/fe/src/features/pronunciation/PronsResult.css
+++ b/fe/src/features/pronunciation/PronsResult.css
@@ -15,7 +15,7 @@
     margin-bottom: 20px;
   }
   
-  .profile-image {
+  .profile {
     width: 13rem;
     height: 13rem;
     border-radius: 50%;
