--- a/fe/src/features/user/Profile.css
+++ b/fe/src/features/user/Profile.css
@@ -17,13 +17,11 @@
     min-height: 100vh; /* ✅ 최소 높이는 항상 100vh 유지 */
     position: sticky;
     top: 0;
-    background: linear-gradient(180deg, #68B9FF 0%, #C8F2FF 100%);
-    color: white;
+    background: #ffb9b1;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    border-right: 2px solid rgba(0, 0, 0, 0.1);
   }
   
   .info-box input[type="password"] {
@@ -66,8 +64,8 @@
   
   .profile-menu li:hover,
   .profile-menu .active {
-    background-color: #2b6bb2;
-    border-radius: 10px;
+    background-color: #ef9e9e;
+    border-radius: 20px;
   }
   
   /* 메인 컨텐츠 */
