S12P11E104-493 Feat : 숨은 그림찾기 API 연동

--- a/fe/src/features/wordgame/AnimalGame.css
+++ b/fe/src/features/wordgame/AnimalGame.css
@@ -106,17 +106,20 @@
     font-size: 1rem;
   }
   
-  /* 마이크 버튼 */
-  .mic-button {
-    position: absolute;
-    bottom: 20px;
+  /* 녹음 버튼  */
+  .record-button {
     background: none;
     border: none;
     cursor: pointer;
+    outline: none;
+    transition: transform 0.2s ease-in-out;
   }
   
-  .mic-button img {
-    width: 50px;
+  .record-button img {
+    width: 50px; /* 버튼 크기 */
     height: 50px;
   }
   
+  .record-button:active {
+    transform: scale(0.9);
+  }
