--- a/fe/src/features/auth/index.css
+++ b/fe/src/features/auth/index.css
@@ -11,12 +11,12 @@
     border-radius: 12px;
     width: 380px;
     text-align: center;
-    margin-top: 20%;
+    margin-top: 12%;
 }
 
 /* 입력 그룹 */
 .input-group {
-    margin-bottom: 10px;
+    margin-bottom: 6px;
     display: flex;
     flex-direction: column;
 }
@@ -101,12 +101,30 @@
     align-items: center; /* 세로 가운데 정렬 */
     width: 100%; /* 버튼이 부모 요소의 전체 너비를 차지하도록 설정 */
   }
-  
+  .naverbtn {
+    background-color: #03C75A;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    width: 100%;
+    height: 55px;
+    padding: 0;
+    border-radius: 3px;
+  }
   .kakao {
     width: 100%; /* 가이드에 맞춘 크기 */
     height: auto;
     display: block;
     margin: 10px auto; /* 중앙 정렬 */
+    box-shadow: inset;
+  }
+
+  .naver {
+    width: 50%; 
+    height: auto;
+    display: block;
+    margin: auto;
+    border-radius: 3%;
     box-shadow: inset;
   }
 
