--- a/fe/src/features/pronunciation/PronsMain.css
+++ b/fe/src/features/pronunciation/PronsMain.css
@@ -5,23 +5,24 @@
   height: 100vh; /* ✅ 전체 화면을 채우도록 설정 */
   justify-content: flex-start; /* 수직 가운데 정렬 */
   align-items: center; /* 수평 가운데 정렬 */
-  margin-top: -120px; /* ✅ 제목을 위로 이동 */
+  margin-top: -12vh; /* ✅ 제목을 위로 이동 */
   
 }
   .card{
     font-family: SDSamliphopang;
     font-size: 1.5rem;
-    margin-bottom: 3%;
-    width: 45vh;
-    height: 68vh;
+
+    width: 18vw;
+    height: 62vh;
   }
   
   .card-slider {
     display: flex;
-    gap: 20px;
+    gap: 1vw;
     flex-wrap: wrap;
     box-sizing: border-box;
-    margin-top: -5px; /* ✅ 카드 전체를 위로 이동 */
+    margin-top: -1vh; /* ✅ 카드 전체를 위로 이동 */
+    /* padding: 0 2vw */
   }
 
   .card:nth-child(1) {
@@ -40,25 +41,24 @@
       
     }
 
-
   .card .emoji {
     font-size: 2rem;
-    margin-bottom: 10px;
+   
   }
 
   .card .divider {
-    width: 80%;
+    width: 80vw;
     height: 2px;
     background-color: #ccc;
-    margin: 10px 0;
+    margin: 1rem 0;
   }
 
-  .start-button {
-    font-size: 2rem;
+  .start {
+    font-size: 1.1rem;
     font-family: SDSamliphopang;
     background-color: #f5b041;
-    width: 30%;
-    height: 10%;
+    width: 70%;
+    height: 20%;
     color: #fff;
     border: none;
     border-radius: 10rem;
@@ -66,13 +66,33 @@
     transition: background-color 0.3s ease;
   }
   
-  .start-button:hover {
+  .start:hover {
     background-color: #d68910;
   }
 
   .pronstitle-image {
-    width: 100%;
+    width: 75%;
     max-width: 600px;
     margin: 1rem auto;
     display: block;
   }
+
+
+  /* @media (max-width: 768px) {
+    .card {
+      width: 80vw;
+      height: 50vh;
+      font-size: 1.2rem;
+    }
+  
+    .start-button {
+      font-size: 1.5rem;
+      width: 70%;
+      max-width: 100px;
+    }
+  
+    .pronstitle-image {
+      width: 90vw;
+    }
+  }
+   */
