--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -111,3 +111,19 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
+  .next-button {
+    margin-top: 16px; 
+    padding: 10px 22px;
+    font-size: 16px;
+    background-color: #2ec4a1;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    position: fixed; 
+    right: 80px;
+    bottom: 20px;
+    font-weight: bold;
+}
