--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -20,7 +20,7 @@ body {
   padding: 0;
   /* box-sizing: border-box; */
   height: 100vh;
-  overflow: hidden; /* ✅ 스크롤바 제거 */
+  overflow: auto; /* ✅ 스크롤바 제거 */
 }
 
 /* 페이지 전체를 채우는 기본 스타일 */
@@ -31,7 +31,6 @@ body {
   justify-content: center;
 
 }
-
 
 
 @font-face {
@@ -51,15 +50,3 @@ body {
     src: url('./assets/fonts/SDSamliphopangcheTTFBasic.ttf');
 }
 
-.next-button {
-    margin-top: 16px; 
-    padding: 10px 22px;
-    font-size: 16px;
-    background-color: #64d190;
-    color: white;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
