S12P11E104-471 Feat: 회원탈퇴 가능, 입모양 video 불러오기

--- a/fe/src/features/pronunciation/PronsResult.css
+++ b/fe/src/features/pronunciation/PronsResult.css
@@ -1,10 +1,11 @@
 .prons-result-container {
+    padding-top: 5%;
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
     text-align: center;
     min-height: 100vh; /* ✅ 화면이 아래로 스크롤 가능하도록 설정 */
-    padding-bottom: 50px; /* 하단 여백 추가 */
+    
     
 }
 
