--- a/fe/src/features/user/Profile.css
+++ b/fe/src/features/user/Profile.css
@@ -29,7 +29,7 @@
   }
   
   .info-box input[type="password"] {
-    width: 25%;
+    width: 20vw;
     padding: 10px;
     margin-top: 5px;
     border: 1px solid #ccc;
@@ -44,7 +44,7 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
-    width: 15%;
+    width: 20vw;
   }
   
   .profile-avatar {
@@ -194,3 +194,17 @@
     }
   } */
   
+  .delete-button {
+    background-color: #e74c3c;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s;
+    width: 15vw;
+}
+
+.delete-button:hover {
+    background-color: #c0392b;
+}
