S12P11E104-464 Design: PronsMain 타이틀 이미지 크기 수정

--- a/fe/src/features/pronunciation/PronsMain.css
+++ b/fe/src/features/pronunciation/PronsMain.css
@@ -70,7 +70,8 @@
   }
 
   .pronstitle-image {
-    width: 75%;
+    width: 60vw;
+    height: auto;
     max-width: 600px;
     margin: 1rem auto;
     display: block;
