--- a/fe/src/components/button/GoBackButton.css
+++ b/fe/src/components/button/GoBackButton.css
@@ -1,7 +1,7 @@
 .go-back-button {
     position: fixed; /* 화면에 고정 */
-    bottom: 20px; /* 화면 아래에서 20px */
-    left: 20px; /* 화면 왼쪽에서 20px */
+    top: 20px; /* 화면 아래에서 20px */
+    left: 80px; /* 화면 왼쪽에서 20px */
     background: none; /* 배경 제거 */
     border: none; /* 테두리 제거 */
     padding: 0; /* 여백 제거 */
